--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^4.3.1",
     "react-routing": "0.0.7",
     "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.10",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
