--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "axios": "^0.18.0",
     "moment": "^2.24.0",
     "react": "^16.7.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.7.0",
+    "react-number-format": "^4.0.6",
+    "react-pose": "^4.0.6",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-routing": "0.0.7",
@@ -16,7 +19,8 @@
     "react-scroll": "^1.7.10",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
